Design Changed(その他）

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,3 +3,91 @@
 <section class="post_form">
   <%= render 'posts/post_form' %>
 </section>
+
+<div class="ui vertical fluid accordion menu">
+            <div class="item">
+              <a class="active title">
+                <i class="dropdown icon"></i>
+                Size
+              </a>
+              <div class="active content">
+                <div class="ui form">
+                  <div class="grouped fields">
+                    <div class="field">
+                      <div class="ui radio checkbox">
+                        <input type="radio" name="size" value="small" tabindex="0" class="hidden">
+                        <label>Small</label>
+                      </div>
+                    </div>
+                    <div class="field">
+                      <div class="ui radio checkbox">
+                        <input type="radio" name="size" value="medium" tabindex="0" class="hidden">
+                        <label>Medium</label>
+                      </div>
+                    </div>
+                    <div class="field">
+                      <div class="ui radio checkbox">
+                        <input type="radio" name="size" value="large" tabindex="0" class="hidden">
+                        <label>Large</label>
+                      </div>
+                    </div>
+                    <div class="field">
+                      <div class="ui radio checkbox">
+                        <input type="radio" name="size" value="x-large" tabindex="0" class="hidden">
+                        <label>X-Large</label>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item">
+              <a class="title">
+                <i class="dropdown icon"></i>
+                Colors
+              </a>
+              <div class="content">
+                <div class="ui form">
+                  <div class="grouped fields">
+                    <div class="field">
+                      <div class="ui radio checkbox">
+                        <input type="radio" name="color" tabindex="0" class="hidden">
+                        <label>Red</label>
+                      </div>
+                    </div>
+                    <div class="field">
+                      <div class="ui radio checkbox">
+                        <input type="radio" name="color" tabindex="0" class="hidden">
+                        <label>Orange</label>
+                      </div>
+                    </div>
+                    <div class="field">
+                      <div class="ui radio checkbox">
+                        <input type="radio" name="color" tabindex="0" class="hidden">
+                        <label>Green</label>
+                      </div>
+                    </div>
+                    <div class="field">
+                      <div class="ui radio checkbox">
+                        <input type="radio" name="color" tabindex="0" class="hidden">
+                        <label>Blue</label>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+          <div class="ui checkbox">
+                      <input type="checkbox" name="fun" tabindex="0" class="hidden">
+                      <label>I enjoy having fun</label>
+                    </div>
+
+
+                    <div class="ui toggle checkbox">
+            <input type="checkbox" name="public" tabindex="0" class="hidden">
+            <label>Make this post public</label>
+          </div>
