--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,13 +30,14 @@
     <meta property="og:url" content="https://www.stylatte.com">
     <meta property="og:image" content="">
 
-<!-- CSS -->
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+
 <!-- CSS Framework(semanticUI) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 
-<!-- jQuery -->
+<!-- turbolinks CSS -->
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+<!-- turbolinks jQuery -->
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
 <!-- For IE 9-->
