--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -7,7 +7,7 @@
 
 <div class="header">
 
-<div class="ui piled segment">
+<div class="ui segment">
   <h4 class="ui header">A header</h4>
   <p>Te eum doming eirmod, nominati pertinacia argumentum ad his. Ex eam alia facete scriptorem, est autem aliquip detraxit at. Usu ocurreret referrentur at, cu epicurei appellantur vix. Cum ea laoreet recteque electram, eos choro alterum definiebas in. Vim dolorum definiebas an. Mei ex natum rebum iisque.</p>
    <p>Audiam quaerendum eu sea, pro omittam definiebas ex. Te est latine definitiones. Quot wisi nulla ex duo. Vis sint solet expetenda ne, his te phaedrum referrentur consectetuer. Id vix fabulas oporteat, ei quo vide phaedrum, vim vivendum maiestatis in.</p>
@@ -90,6 +90,8 @@
   Press
 </h4>
 
+
+
 <p>STYLATTE is used and loved by millions of people around the globe.</p>
 
 <!-- 投資家向け案内 -->
@@ -119,3 +121,13 @@
 </div>
 
 <!-- 求人画像ここに貼る We are hiring-->
+
+
+
+<!-- 管理者への入り口 -->
+<h4 class="ui horizontal divider header">
+  **** ADMIN ONLY******
+</h4>
+<div class="ui inverted link list">
+  <button class="ui red basic button"><%= link_to "Admin", admin_path %></button>
+</div>
