--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,4 @@
 ＞＞posts/_postページはじまり。
-<div class="ui segment">
 
 <li id="post-<%= post.id %>"></li>
   <%= link_to gravatar_for(post.user, size: 50), post.user %>
@@ -30,7 +29,4 @@
     </span>
   <% end %>
 
-
-
-
-</div>
+<div class="ui divider"></div>
