Design Changed(styliststart / policyページ）

--- a/app/views/static_pages/styliststart.html.erb
+++ b/app/views/static_pages/styliststart.html.erb
@@ -68,9 +68,26 @@
 </table>
 
 
+          <!-- 3 -->
+          <div class="ui four steps">
+            <div class="ui active step">
+              Shipping
+            </div>
+            <div class="ui disabled step">
+              Billing
+            </div>
+            <div class="ui disabled step">
+              Confirm Order
+            </div>
+            <div class="ui disabled step">
+              Complete
+            </div>
+          </div>
 
 
-<h2>Need more? contact us.</h2>
+
+<h2>Need more info? contact us.</h2>
+<p>There is the way for company to promote your own brands items!</p>
 
   </div>
 
