--- a/app/views/static_pages/policy.html.erb
+++ b/app/views/static_pages/policy.html.erb
@@ -4,5 +4,8 @@
   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.
 </div>
 
+<div class="ui raised segment">
+  <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+</div>
 <!-- 画像ここに貼る。 -->
 <%= link_to image_tag("Private Policy.jpg", alt: "STYLATTE"), root_path %>
