--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -22,3 +22,32 @@
     -広告募集ページをご覧ください。
   </div>
 </div>
+
+
+<!-- ５ 必ずulは入れること（custom.cssにて操作）-->
+<div class="acodmenu">
+    <label for="Panel1">
+      <div class="active title">
+        <i class="dropdown icon"></i>
+        What is a dog?
+      </div>
+    </label>
+    <input type="checkbox" id="Panel1" class="on-off" />
+    <ul>
+        <p>Three common ways for a prospective owner to acquire a dog is from pet shops, private owners, or shelters.</p>
+    </ul>
+    <label for="Panel12">
+      <div class="title">
+        <i class="dropdown icon"></i>
+        What kinds of dogs are there?
+      </div>
+    </label>
+    <input type="checkbox" id="Panel12" class="on-off" />
+    <ul>
+        <li><a href="">リンク2</a></li>
+        <li><a href="">リンク</a></li>
+        <li><a href="">リンク</a></li>
+        <li><a href="">リンク</a></li>
+        <li><a href="">リンク</a></li>
+    </ul>
+</div>
