--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -36,9 +36,23 @@
 
 </div>
 
-<div class="ui labeled input">
-  <div class="ui label">
-    http://
-  </div>
-  <input type="text" placeholder="mysite.com">
-</div>
+
+
+<!-- 必ずulは入れること（custom.cssにて操作）-->
+    <div class="acodmenu">
+        <label for="Panel20">
+          <div class="active title">
+            <i class="dropdown icon"></i>
+            More Details
+          </div>
+        </label>
+        <input type="checkbox" id="Panel20" class="on-off" />
+        <ul>
+          <div class="ui labeled input">
+            <div class="ui label">
+              http://
+            </div>
+            <input type="text" placeholder="mysite.com">
+          </div>
+        </ul>
+    </div>
