--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,90 +4,99 @@
   <%= render 'posts/post_form' %>
 </section>
 
-<div class="ui vertical fluid accordion menu">
-            <div class="item">
-              <a class="active title">
-                <i class="dropdown icon"></i>
-                Size
-              </a>
-              <div class="active content">
-                <div class="ui form">
-                  <div class="grouped fields">
-                    <div class="field">
-                      <div class="ui radio checkbox">
-                        <input type="radio" name="size" value="small" tabindex="0" class="hidden">
-                        <label>Small</label>
-                      </div>
-                    </div>
-                    <div class="field">
-                      <div class="ui radio checkbox">
-                        <input type="radio" name="size" value="medium" tabindex="0" class="hidden">
-                        <label>Medium</label>
-                      </div>
-                    </div>
-                    <div class="field">
-                      <div class="ui radio checkbox">
-                        <input type="radio" name="size" value="large" tabindex="0" class="hidden">
-                        <label>Large</label>
-                      </div>
-                    </div>
-                    <div class="field">
-                      <div class="ui radio checkbox">
-                        <input type="radio" name="size" value="x-large" tabindex="0" class="hidden">
-                        <label>X-Large</label>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+
+<!-- ３ -->
+  <div class="ui checkbox">
+    <input type="checkbox" name="fun">
+    <label>I enjoy having fun</label>
+  </div>
+
+  <div class="ui toggle checkbox">
+    <input type="checkbox" name="pet">
+    <label>Allow other people to pet my dog</label>
+  </div>
+
+
+
+
+
+
+<!-- ポストの詳細選ぶ（アコーディオン）必ずulは入れること（custom.cssにて操作）-->
+    <div class="acodmenu">
+        <label for="Panel13">
+          <div class="active title">
+            <i class="dropdown icon"></i>
+            Optional Details
+          </div>
+        </label>
+        <input type="checkbox" id="Panel13" class="on-off" />
+        <ul>
+
+
+      <div class="content field">
+        <!-- サイズ選ぶ -->
+
+        <div class="ui form item">
+          <div class="grouped inline fields">
+            <div class="field">
+              <div class="ui radio checkbox">
+                <input type="radio" name="size" value="small">
+                <label>Small</label>
               </div>
             </div>
-            <div class="item">
-              <a class="title">
-                <i class="dropdown icon"></i>
-                Colors
-              </a>
-              <div class="content">
-                <div class="ui form">
-                  <div class="grouped fields">
-                    <div class="field">
-                      <div class="ui radio checkbox">
-                        <input type="radio" name="color" tabindex="0" class="hidden">
-                        <label>Red</label>
-                      </div>
-                    </div>
-                    <div class="field">
-                      <div class="ui radio checkbox">
-                        <input type="radio" name="color" tabindex="0" class="hidden">
-                        <label>Orange</label>
-                      </div>
-                    </div>
-                    <div class="field">
-                      <div class="ui radio checkbox">
-                        <input type="radio" name="color" tabindex="0" class="hidden">
-                        <label>Green</label>
-                      </div>
-                    </div>
-                    <div class="field">
-                      <div class="ui radio checkbox">
-                        <input type="radio" name="color" tabindex="0" class="hidden">
-                        <label>Blue</label>
-                      </div>
-                    </div>
-                  </div>
+            <div class="field">
+              <div class="ui radio checkbox">
+                <input type="radio" name="size" value="medium">
+                <label>Medium</label>
+              </div>
+            </div>
+            <div class="field">
+              <div class="ui radio checkbox">
+                <input type="radio" name="size" value="large">
+                <label>Large</label>
+              </div>
+            </div>
+            <div class="field">
+              <div class="ui radio checkbox">
+                <input type="radio" name="size" value="x-large">
+                <label>X-Large</label>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- サイズ選ぶ終わり -->
+
+        <!-- 色選ぶ -->
+          <div class="ui form item">
+            <div class="grouped inline fields">
+              <div class="field">
+                <div class="ui checkbox">
+                  <input type="checkbox" name="small">
+                  <label>Red</label>
+                </div>
+              </div>
+              <div class="field">
+                <div class="ui checkbox">
+                  <input type="checkbox" name="medium">
+                  <label>Orange</label>
+                </div>
+              </div>
+              <div class="field">
+                <div class="ui checkbox">
+                  <input type="checkbox" name="large">
+                  <label>Green</label>
+                </div>
+              </div>
+              <div class="field">
+                <div class="ui checkbox">
+                  <input type="checkbox" name="x-large">
+                  <label>Blue</label>
                 </div>
               </div>
             </div>
           </div>
-
-
-
-          <div class="ui checkbox">
-                      <input type="checkbox" name="fun" tabindex="0" class="hidden">
-                      <label>I enjoy having fun</label>
-                    </div>
-
-
-                    <div class="ui toggle checkbox">
-            <input type="checkbox" name="public" tabindex="0" class="hidden">
-            <label>Make this post public</label>
-          </div>
+        </div>
+    <!-- 色選ぶ終わり -->
+        </ul>
+    </div>
