--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -48,3 +48,11 @@
       <div class="floating ui teal label"><%= @user.favorite_scomments.count %></div>
     </a>
   </div>
+
+
+<!-- まだ -->
+<div class="ui basic buttons">
+  <div class="ui button">Posts</div>
+  <div class="ui button"><i class="icon users"></i> Following</div>
+  <div class="ui button"><i class="icon users"></i> Followers</div>
+</div>
