Design Changed(ヘッダー)

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,9 +3,15 @@
 
 
 <!-- ロゴ -->
-        <a href="#">
-            <img src="http://danielwinter.at/apple-touch-icon_76x76.png" alt="Logo of Daniel Winter" class="paradeiser_logo">
-        </a>
+<!-- ここは、ふつうのRails pathだと表示崩れするため、htmlの書き方のままで。 -->
+<!-- 元のコードは、
+<a href="#">
+    <img src="http://danielwinter.at/apple-touch-icon_76x76.png" alt="Logo of Daniel Winter" class="paradeiser_logo">
+</a>
+だった。 -->
+
+<a href="http://192.168.99.100:3000">STYLATTE</a>
+
 
 <!-- PCとタブレットのみ表示 -->
 <a href="#" class="paradeiser-hidden-phone">
