--- a/app/views/static_pages/admin.html.erb
+++ b/app/views/static_pages/admin.html.erb
@@ -1,3 +1,6 @@
+
+
+
 <table class="ui striped table">
   <thead>
     <tr>
@@ -58,3 +61,6 @@
     </tr>
   </tbody>
 </table>
+
+
+<iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1RwdsHfO99no-umGdbZnkqlN-Qp1YdWfQuzoJrJaDe44/pubchart?oid=205488333&amp;format=interactive"></iframe>
