Design Changed(フッター)

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,20 +7,20 @@
 
       <div class="eight wide column">
         <h4 class="ui header">About</h4>
-        <div class="ui link list"><br>
-          <%= link_to "Stylist Plans", stylists_path %><br>
-          <%= link_to "Help", help_path %><i class="help icon"></i><br>
-          <%= link_to "Stylatte SNS", about_path %><i class="facebook icon"></i><i class="twitter icon"></i>
+        <div class="ui link list">
+          <%= link_to "About STYLATTE", stylists_path %><br>
+          <i class="facebook icon"></i><a href="https://www.facebook.com/Stylatte-335151873516229/" target="_blank">Facebook</a>
+          <i class="twitter icon"></i><br>
+          <%= link_to "Help", help_path %>
         </div>
         <!-- 言語選択 -->
 
       </div>
 
       <div class="eight wide column">
-        <h4 class="ui header">About</h4>
 
         <div class="ui link list">
-          <%= link_to "Company", about_path %><br>
+          <%= link_to "About Us", about_path %><br>
           <%= link_to "Terms and Conditions", users_path %><br>
           <%= link_to "Private Policy", policy_path %><br>
 
@@ -28,7 +28,7 @@
         <!-- コピーライト -->
         <p>Copyright © 2016 Stylatte. All rights reserved.</p>
 
-        
+
       </div>
 
     </div>
