Design Changed(about companyページ)

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -18,54 +18,42 @@
 
 <!-- プロフィール -->
 <h4 class="ui horizontal divider header">
-  <i class="bar chart icon"></i>
+  <i class="home icon"></i>
   Profile
 </h4>
-
-<%= link_to image_tag("stylatte_50.png", alt: "STYLATTE"), root_path %>
-<%= link_to image_tag("stylatte_logo_7.png", alt: "STYLATTE"), root_path %>
 
 
 <table class="ui definition table">
   <tbody>
     <tr>
       <td class="two wide column">Name</td>
-      <td>STYLATTE (Made by Liebery)</td>
+      <td>Liebery</td>
     </tr>
     <tr>
       <td>Office</td>
-      <td>6 ounces</td>
+      <td>
+        <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1RwdsHfO99no-umGdbZnkqlN-Qp1YdWfQuzoJrJaDe44/pubchart?oid=270929335&amp;format=image"></iframe>
+        <div class="item">
+          <i class="marker icon"></i>Wakayama, Japan
+        </div>
+      </td>
     </tr>
     <tr>
       <td>SNS</td>
-      <td>Yellowish</td>
+      <td>
+        <i class="facebook icon"></i><a href="https://www.facebook.com/Liebery-186139138458815/" target="_blank">Facebook</a>
+        <i class="twitter icon"></i><a href="https://www.facebook.com/Stylatte-335151873516229/about/" target="_blank">Twitter</a>
+      </td>
     </tr>
     <tr>
       <td>URL</td>
       <td>
         <div class="ui list">
-  <div class="item">
-    <i class="users icon"></i>
-    <div class="content">
-      Semantic UI
-    </div>
-  </div>
-  <div class="item">
-    <i class="marker icon"></i>
-    <div class="content">
-      New York, NY
-    </div>
-  </div>
-  <div class="item">
-    <i class="mail icon"></i>
-    <div class="content">
-      <a href="mailto:jack@semantic-ui.com">jack@semantic-ui.com</a>
-    </div>
-  </div>
+
   <div class="item">
     <i class="linkify icon"></i>
     <div class="content">
-      <a href="http://www.semantic-ui.com">semantic-ui.com</a>
+      <a href="http://www.liebery.com">liebery.com</a>
     </div>
   </div>
 </div>
@@ -73,10 +61,53 @@
     </tr>
     <tr>
       <td>Contact Us</td>
-      <td>Not Much Usually</td>
+      <td>
+        <div class="item">
+          <i class="mail icon"></i><a href="mailto:main@liebery.com">main@liebery.com</a>
+        </div>
+      </td>
     </tr>
   </tbody>
 </table>
+
+
+<!-- チーム紹介と求人 -->
+<h4 class="ui horizontal divider header">
+  <i class="users icon"></i>
+  Team
+</h4>
+
+<div class="ui horizontal list">
+  <div class="item">
+    <img class="ui avatar image" src="face5.jpg">
+    <div class="content">
+      <div class="header">Nanami Maeda</div>
+      Founder
+    </div>
+  </div>
+</div>
+<p>Kevin Systrom (@kevin) is the CEO and co-founder of Instagram, a community of more than 500 million who capture and share the world's moments on the service. He is responsible for the company's overall vision and strategy as well as day-to-day operations.Since the beginning, Kevin has focused on simplicity and inspiring creativity through solving problems with thoughtful product design. As a result, Instagram has become the home for visual storytelling for everyone from celebrities, newsrooms and brands, to teens, musicians and anyone with a creative passion.
+
+Prior to founding Instagram, Kevin was part of the startup Odeo, which later became Twitter, and spent two years at Google working on products like Gmail and Google Reader. He graduated from Stanford University with a BS in Management Science and Engineering and serves on the boards of Walmart and KCRW.</p>
+
+<div class="ui horizontal list">
+  <div class="item">
+    <img class="ui avatar image" src="face5.jpg">
+    <div class="content">
+      <div class="header">Christian Rocha</div>
+      Admin
+    </div>
+  </div>
+</div>
+
+<!-- 求人画像ここに貼る We are hiring-->
+
+<!-- 事業一覧 -->
+<h4 class="ui horizontal divider header">
+  事業一覧
+</h4>
+<%= link_to image_tag("stylatte_50.png", alt: "STYLATTE"), root_path %>
+
 
 <!-- ニュース -->
 <h4 class="ui horizontal divider header">
@@ -102,25 +133,6 @@
 <p>STYLATTE is used and loved by millions of people around the globe.</p>
 
 
-<!-- 求人 -->
-<h4 class="ui horizontal divider header">
-  Team
-</h4>
-
-<p>Doggie treats are good for all times of the year. Proven to be eaten by 99.9% of all dogs worldwide.</p>
-
-<!-- メンバー紹介 -->
-<div class="ui horizontal list">
-  <div class="item">
-    <img class="ui avatar image" src="face5.jpg">
-    <div class="content">
-      <div class="header">Christian Rocha</div>
-      Admin
-    </div>
-  </div>
-</div>
-
-<!-- 求人画像ここに貼る We are hiring-->
 
 
 
