Design Changed. (画像や動画埋め込み〜iframe〜をリスポンシブにする。)

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -32,7 +32,6 @@
     <tr>
       <td>Office</td>
       <td>
-        <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/1RwdsHfO99no-umGdbZnkqlN-Qp1YdWfQuzoJrJaDe44/pubchart?oid=270929335&amp;format=image"></iframe>
         <div class="item">
           <i class="marker icon"></i>Wakayama, Japan
         </div>
@@ -69,6 +68,13 @@
     </tr>
   </tbody>
 </table>
+
+<!-- この画像の１行をリスポンシブにすること。 -->
+<div class="iframe-wrapper">
+  <iframe width="560" height="315" src="https://docs.google.com/spreadsheets/d/1RwdsHfO99no-umGdbZnkqlN-Qp1YdWfQuzoJrJaDe44/pubchart?oid=270929335&amp;format=image" frameborder="0" class="iframe"></iframe>
+</div>
+
+
 
 
 <!-- チーム紹介と求人 -->
