Design Changed(helpページ)

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,50 +1,27 @@
-<title id="pageTitle">Help | STYLATTE</title>
-
 <h1>FAQ</h1>
-
-<!-- アコーディオンにしたいときは、こちら；http://semantic-ui.com/modules/accordion.html -->
-<div class="ui segments">
-  <div class="ui segment">
-    <p>Top</p>
-  </div>
-  <div class="ui red segment">
-    <p>Middle</p>
-  </div>
-  <div class="ui blue segment">
-    <p>Middle</p>
-  </div>
-  <div class="ui green segment">
-    <p>無料で利用できますか？</p><br>
-    -提案を受ける側、提案する側のユーザーともに無料です。（ただし、一部提案する側のユーザーが応用機能を利用したい場合、有料機能もあります。詳しくは、Stylistになるページをご覧ください。）
-  </div>
-  <div class="ui yellow segment">
-  <p>自社の広告をのせてもらうことはできますか？</p><br>
-    -広告募集ページをご覧ください。
-  </div>
-</div>
-
 
 <!-- ５ 必ずulは入れること（custom.cssにて操作）-->
 <div class="acodmenu">
     <label for="Panel1">
       <div class="active title">
         <i class="dropdown icon"></i>
-        What is a dog?
+        Is it free?
       </div>
     </label>
     <input type="checkbox" id="Panel1" class="on-off" />
     <ul>
-        <p>Three common ways for a prospective owner to acquire a dog is from pet shops, private owners, or shelters.</p>
+        <p>提案を受ける側、提案する側のユーザーともに無料です。（ただし、一部提案する側のユーザーが応用機能を利用したい場合、有料機能もあります。詳しくは、Stylistになるページをご覧ください。）
+</p>
     </ul>
     <label for="Panel12">
       <div class="title">
         <i class="dropdown icon"></i>
-        What kinds of dogs are there?
+        広告をのせてもらうことはできますか？
       </div>
     </label>
     <input type="checkbox" id="Panel12" class="on-off" />
     <ul>
-        <li><a href="">リンク2</a></li>
+        <li><p>こちらの広告募集ページをご覧ください。</p><a href="">リンク2</a></li>
         <li><a href="">リンク</a></li>
         <li><a href="">リンク</a></li>
         <li><a href="">リンク</a></li>
